--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #7fa1e3;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
