--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -13,17 +13,94 @@
   }
 }
 
+.button-56 {
+  margin-top: 50px;
+  align-items: center;
+  background-color: linear-gradient(to right, #ffdeda, #e17165);
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: linear-gradient(to right, #ffdeda, #e17165);
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+  background-color: #f9b2aa;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
+}
+
+.float{
+  float: left;
+  border-color: aqua;
+  overflow: auto;
+}
+
 .float-left {
   float: left;
   border-color: aqua;
-  border-radius: 1in;
-  box-shadow: #61dafb;
+  overflow: auto;
+  border: solid #000;
+  border-width: 2px;
+  min-width: 300px;
+  min-height: 200px;
+  margin-right: 30px;
+  border-color: rgb(254, 254, 254);
   margin-left: 50px;
 }
 
 .float-right {
   float: right;
-  border-color: chartreuse;
+  overflow: hidden;
+  border: solid #000;
+  margin-left: 30px;
+  min-width: 300px;
+  min-height: 200px;
+  border-width: 2px;
+  border-color: rgb(254, 254, 254);
 }
 
 .App-header {
@@ -34,7 +111,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .images {
