--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -88,6 +88,7 @@
   min-width: 300px;
   min-height: 200px;
   margin-right: 30px;
+  margin-bottom: 0px;
   border-color: rgb(254, 254, 254);
   margin-left: 50px;
 }
@@ -99,8 +100,14 @@
   margin-left: 30px;
   min-width: 300px;
   min-height: 200px;
+  margin-bottom: 0px;
   border-width: 2px;
   border-color: rgb(254, 254, 254);
+}
+
+.title {
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
 }
 
 .App-header {
